New templates added

--- a/templates/add_package.html
+++ b/templates/add_package.html
@@ -167,7 +167,8 @@
         <a href="/admins" id="logout-link">Home</a>
         <a href="{% url 'user_list' %}">Users </a>  
         <a href="/travellers">Travellers</a>
-        <a href="/drivers">Drivers</a> 
+        <a href="/drivers">Drivers</a>
+        <a href="/custom_package">Add Custom Package</a>
         <a href="/upload_package">Add Package</a>
         <a href="/view-packages">View Package</a>
         <a href="/bookings">Upcoming Journeys</a>
