--- a/templates/history_journeys.html
+++ b/templates/history_journeys.html
@@ -58,6 +58,14 @@
             text-align: center;
             margin: 20px 0;
         }
+        .star-rating .star {
+    cursor: pointer;
+}
+
+.star-rating .star.selected,
+.star-rating .star.hover {
+    color: gold;
+}
 
 
 </style>
@@ -92,33 +100,144 @@
           </div>
         </div>
       </nav>
-<br><br>        
+<br><br>    
+{% if messages %}
+{% for messages in messages %}
+<div class="container">
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+        {{ messages }}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+</div>
+{% endfor %}
+{% endif %}
+
+
     <h1>History of Journeys</h1>
     <p style="font-size: 20px;font-weight: bold;">Stay Safe and Stay Connected. We are Happy to See You Soon.</p>
-<div class="row">
+    <div class="row">
         {% for package_with_images in packages_with_images %}
-        <div class="col-md-4 mb-4">
-            <div class="card">
-                <!-- Display the first image if available -->
-                <a href="/package/{{ package_with_images.package.id }}?from_upcoming_journeys=true">
-                {% if package_with_images.images.first %}
-                <img src="{{ package_with_images.images.first.image.url }}" class="card-img-top" alt="Package Image">
-                {% else %}
-                <img src="{% static 'path_to_default_image.jpg' %}" class="card-img-top" alt="Default Image">
-                {% endif %}
-                </a>
-                <div class="card-body">
-                    <h5 class="card-title">{{ package_with_images.package.package_name }}</h5>
-                    <p class="card-text">Start Date: {{ package_with_images.package.start_date }}</p>
-                    <p class="card-text">End Date: {{ package_with_images.package.end_date }}</p>
-                    <!-- Add more details as needed -->
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <!-- Display the first image if available -->
+                    <a href="/package/{{ package_with_images.package.id }}?from_upcoming_journeys=true">
+                        {% if package_with_images.images.first %}
+                            <img src="{{ package_with_images.images.first.image.url }}" class="card-img-top" alt="Package Image">
+                        {% else %}
+                            <img src="{% static 'path_to_default_image.jpg' %}" class="card-img-top" alt="Default Image">
+                        {% endif %}
+                    </a>
+                    <div class="card-body">
+                        <h5 class="card-title">{{ package_with_images.package.package_name }}</h5>
+                        <p class="card-text">Start Date: {{ package_with_images.package.start_date }}</p>
+                        <p class="card-text">End Date: {{ package_with_images.package.end_date }}</p>
+    
+                        <!-- Display rating in star format -->
+                        {% if package_with_images.rating.stars %}
+                            <!-- Display existing rating in filled star format -->
+                            <label>Rating:</label>
+                            <div class="star-rating" data-package-id="{{ package_with_images.package.id }}">
+                                {% for i in ''|rjust:package_with_images.rating.stars %}
+                                    {% if package_with_images.rating.stars|default:0 > i %}
+                                        <span class="star selected" data-rating="{{ i }}" onclick="handleStarClick('{{ package_with_images.package.id }}', '{{ i }}')">&#9734;</span>
+                                    {% else %}
+                                        <span class="star" style="color: gold;" data-rating="{{ i }}" onclick="handleStarClick('{{ package_with_images.package.id }}', '{{ i }}')">&#9733;</span>
+                                    {% endif %}
+                                {% endfor %}
+                                <form method="post" action="{% url 'submit_rating' package_with_images.package.id 0 %}">
+                                    {% csrf_token %}
+                                    <div>
+                                        <label for="rating">Edit your Rating:</label><br>
+                                        <input type="text" name="description" style="font-size: medium; font-family: 'Times New Roman', Times, serif; border-radius: 10px; border: 1px solid red;" id="description_input" value="{{ package_with_images.rating.description }}">
+                                    </div>
+                                    <div class="star-rating" data-package-id="{{ package_with_images.package.id }}">
+                                        {% for i in ''|rjust:5 %}
+                                            {% with forloop.counter as rating %}
+                                                <span class="star" name="stars" id="star{{ package_with_images.package.id }}_{{ rating }}" data-rating="{{ rating }}" onclick="handleStarClick('{{ package_with_images.package.id }}', '{{ rating }}')" onmouseover="handleStarHover('{{ package_with_images.package.id }}', '{{ rating }}')" onmouseout="handleStarMouseOut('{{ package_with_images.package.id }}')">&#9733;</span>
+                                            {% endwith %}
+                                        {% endfor %}
+                                        <input type="hidden" name="stars" id="stars_input_{{ package_with_images.package.id }}" value=""><br>
+                                        <button type="submit">Submit Rating</button>
+                                    </div>
+                                </form>
+                            </div>
+                        {% else %}
+                            <!-- Add a form to submit a rating if not already rated -->
+                            <form method="post" action="{% url 'submit_rating' package_with_images.package.id 0 %}">
+                                {% csrf_token %}
+                                <div>
+                                    <label>Your Experience with Niwi Travels:</label>
+                                    <input type="text" name="description" id="description_input" > 
+                                </div>
+                                <div class="star-rating" data-package-id="{{ package_with_images.package.id }}">
+                                    {% for i in ''|rjust:5 %}
+                                        {% with forloop.counter as rating %}
+                                            <span class="star" name="stars" id="star{{ package_with_images.package.id }}_{{ rating }}" data-rating="{{ rating }}" onclick="handleStarClick('{{ package_with_images.package.id }}', '{{ rating }}')" onmouseover="handleStarHover('{{ package_with_images.package.id }}', '{{ rating }}')" onmouseout="handleStarMouseOut('{{ package_with_images.package.id }}')">&#9733;</span>
+                                        {% endwith %}
+                                    {% endfor %}
+                                    <input type="hidden" name="stars" id="stars_input_{{ package_with_images.package.id }}" value="">
+                                    <button type="submit">Submit Rating</button>
+                                </div>
+                            </form>
+                        {% endif %}
+                    </div>
                 </div>
             </div>
-        </div>
-        {% empty %}
-        <p class="no-journeys">HHistory of journeys not found.</p>
+            <script>
+                function handleStarClick(packageId, rating) {
+                 const stars = document.querySelectorAll(`[data-package-id="${packageId}"] .star`);
+
+                 stars.forEach((star, index) => {
+                     if (index < rating) {
+                         star.classList.add('selected');
+                     } else {
+                         star.classList.remove('selected');
+                     }
+                 });
+
+                     // Set the value of the hidden input to the selected rating
+                     const ratingInput = document.querySelector(`#stars_input_${packageId}`);
+                     ratingInput.value = rating;
+                 }
+
+                 
+                 function handleStarHover(packageId, rating) {
+                     const stars = document.querySelectorAll(`[data-package-id="${packageId}"] .star`);
+             
+                     stars.forEach((star, index) => {
+                         if (index < rating) {
+                             star.classList.add('hover');
+                         } else {
+                             star.classList.remove('hover');
+                         }
+                     });
+                 }
+                 
+                 function handleStarMouseOut(packageId) {
+                     const stars = document.querySelectorAll(`[data-package-id="${packageId}"] .star`);
+             
+                     stars.forEach((star) => {
+                         star.classList.remove('hover');
+                     });
+                 }
+
+                 function handleStarHover(packageId, rating) {
+                 for (let i = 1; i <= 5; i++) {
+                     const star = document.getElementById(`star${packageId}_${i}`);
+                     if (i <= rating) {
+                         star.style.color = "gold";
+                     } else {
+                         star.style.color = "";
+                     }
+                 }
+             }
+
+             </script>
         {% endfor %}
-</div>
+    </div>
+    
     
     </body>
     </html>      
