--- a/templates/adminreg.html
+++ b/templates/adminreg.html
@@ -80,8 +80,10 @@
         <a href="/travellers">Travellers</a>
         <a href="/drivers">Drivers</a> 
         <a href="/upload_package">Add Package</a>
+        <a href="/admin_custom_package">Custom Packages</a>
         <a href="/view-packages">View Package</a>
-        <a href="/bookings">Upcoming Journeys</a>
+        <a href="/bookings">Verification Requests</a>
+        <a href="/verified_bookings">Verified Bookings</a>
         <a href="/ongoing-bookings" id="logout-link">Ongoing Journeys</a>
         <a href="/history-bookings">History Journeys</a>
         <a href="/logout" id="logout-link">Logout</a>
