--- a/templates/loginview.html
+++ b/templates/loginview.html
@@ -10,7 +10,9 @@
   <title>NIWITRAVELS</title>
    <!-- Bootstrap CSS -->
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-
+   <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+ 
    <!-- Bootstrap JavaScript and Dependencies (jQuery and Popper.js) -->
    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
@@ -18,8 +20,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="icon" href="{% static 'Niwi_Travels/images/favicon.ico' %}" type="image/x-icon">
   
-  <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
 
  <link rel="stylesheet" href="{% static 'Niwi_Travels/css/open-iconic-bootstrap.min.css' %}"> 
@@ -167,6 +167,7 @@
 				
 	          <li class="nav-item"><a href="#services-section" class="nav-link"><span>Services</span></a></li>
 	          <li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
+            <li class="nav-item"><a href="#package-section" class="nav-link"><span>Packages</span></a></li>
 	          <li class="nav-item"><a href="#destination-section" class="nav-link"><span>Destination</span></a></li>
 	          <li class="nav-item"><a href="#blog-section" class="nav-link"><span>Blog</span></a></li>
 	          <li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
@@ -187,7 +188,7 @@
                         {% endif %}
                         <p>{{ user.username }}</p>
                     </div>
-					<a class="dropdown-item" href="/upcoming-journeys" id="#">Upcoming Journeys</a>
+					<a class="dropdown-item" name="upcoming-journeys-link" href="/upcoming-journeys" id="#">Upcoming Journeys</a>
 					<a class="dropdown-item" href="/ongoing-journeys" id="#">Ongoing Trips</a>
 					<a class="dropdown-item" href="/history-journeys" id="#">History</a>
                     <a class="dropdown-item" href="/viewprofileT">View Profile</a>
@@ -349,6 +350,39 @@
 										<input type="text" id="search-input" placeholder="Search Here" />
 									</div>
     </section>
+
+
+    <section class="ftco-section" id="package-section">
+      <div class="container">
+        <div class="row justify-content-center pb-5">
+          <div class="col-md-12 heading-section text-center ftco-animate">
+            <span class="subheading"></span>
+            <h2 class="mb-4">Choose Your Best Category</h2>
+            <p>Easily find your favourite destination by choosing any Category.</p>
+          </div>
+        </div>
+    
+        <div class="row">
+          <div class="col-md-4">
+            <a href="/honeymoon_packages">
+            <div class="project">
+              <div class="img-container text-center">
+                <img src="{% static 'Niwi_Travels/images/honeymoon-package.jpg' %}" alt="Honeymoon" class="img-fluid category-image">
+              </div>
+              <div class="category-info text-center"><br>
+                <h2 class="category-title">Honeymoon Packages</h2>
+                <p class="category-description">Experience the perfect romantic getaway with our honeymoon packages.</p>
+              </div>
+            </div>
+           </a>
+          </div>
+    
+          <!-- Add more category cards as needed -->
+        </div>
+      </div>
+    </section>
+
+
     <section class="ftco-section" id="destination-section">
     	<div class="container">
     		<div class="row justify-content-center pb-5">
@@ -374,6 +408,9 @@
                     <h3>
                         <a href="/package/{{ package.id }}">{{ package.package_name }}</a>
                     </h3>
+                    <span>Starting Date: {{ package.start_date }}</span><br>
+                    <span>End Date: {{ package.end_date }}</span>
+
 					<h3 style="background-color: rgb(199, 21, 71);">{{ package.booking_deadline }} is the Last Date for Booking</h3>
                     <div class="star d-flex clearfix">
                         <div class="mr-auto float-left">
