--- a/templates/payment.html
+++ b/templates/payment.html
@@ -180,17 +180,20 @@
           </div>
         </div>
       </nav>
-<div class="booking-form-box">
-    <h1>Payment Page</h1>
-    <p style="text-align: center;">Travel Package: {{ travel_package.package_name }}</p>
-    <P style="text-align: center;">Starting date of Journey: {{ travel_package.start_date }}</P>
-    <P style="text-align: center;">End date of Journey: {{ travel_package.end_date }}</P>
-    <p style="text-align: center;">Total Amount: ₹{{ total_amount|floatformat:0 }}</p>
+      <div class="booking-form-box">
+        <h1>Payment Page</h1>
+        <p style="text-align: center;">Travel Package: {{ travel_package.package_name }}</p>
+        <p style="text-align: center;">Starting date of Journey: {{ travel_package.start_date }}</p>
+        <p style="text-align: center;">End date of Journey: {{ travel_package.end_date }}</p>
+        <p style="text-align: center;">Total Amount: ₹{{ total_amount|floatformat:0 }}</p>
+        <p style="text-align: center;">GST Amount (15%): ₹{{ gst_amount|floatformat:0 }}</p>
+        <p style="text-align: center;">Final Price to Pay: ₹{{ final_price|floatformat:0 }}</p>
     
 
     <!-- Include your payment form here -->
     {% if payment.is_paid %}
-    <a href="/thome" class="btn btn-primary">Payment Successful!</a>
+    <a href="/thome" class="update_booking_status">Payment Successful!</a>
+    <a href="{% url 'download_receipt' booking.id %}" class="btn btn-success" style="margin-left: 330px;">Download Receipt</a>
     {% else %}
     <form action="{% url 'pay' booking.id %}" method="post"> <!-- Assuming you use POST method for payment -->
         {% csrf_token %}
@@ -200,5 +203,8 @@
         
     </form>
 </div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
